apps/foo-bar/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: foo-bar-ingress
    labels:
        app: foo-bar
spec:
    ingressClassName: kong
    rules:
        -   http:
                paths:
                    -   path: /foo
                        pathType: Prefix
                        backend:
                            service:
                                name: foo-service
                                port:
                                    number: 80
                    -   path: /bar
                        pathType: Prefix
                        backend:
                            service:
                                name: bar-service
                                port:
                                    number: 80
